# rust_clipboard_monitor_cli

./: .gitignore  ACCESSIBILITY_FINAL_FIX_SUMMARY.md  ACCESSIBILITY_LISTENERS_MIGRATION.md  ACCESSIBILITY_RESEARCH.md  BUGS.md  CFSTRING_CONVERSION_RESEARCH.md  COMPILATION_FIXES_NEEDED.md  COMPLEX_MIGRATION_PATTERNS.md  Cargo.toml  Cargo_updated.toml  DEEP_RESEARCH_MACOS_CONTEXT_APIS.md  DEPRECATION_RESEARCH.md  FIX_FILE_COPY.md  KEY_CHANGES_SUMMARY.md  MIGRATION_GUIDE.md  OBJC2_MIGRATION_GUIDE.md  OBJC2_RESEARCH_SUMMARY.md  PERPLEXITY_RESEARCH.md  POLLING.md  PRACTICAL_IMPLEMENTATION_GUIDE.md  README.md  RESEARCH.md  RESEARCH_SUMMARY_AND_RECOMMENDATIONS.md  Safari_test.jsonl  TESTING_ENHANCED_BLOCK.md  WINDOW_STATE_TRACKING_COMPLETE.md  build_dart_wrapper.sh  dart-clipboard-monitor.md  flutter_rust_bridge.yaml  quick_test.dart  test_app_switch.sh  test_clipboard.sh  test_streaming.dart
.archive/: main_complete.rs  main_enhanced.rs  main_events.rs  main_old.rs  main_ultimate.rs
.draft_1/: accessibility_observer_migration.rs  app_switcher.rs  clipboard_file_reader.rs  event_tap.rs  main.rs  main_migrated_sample.rs  test_safari.rs
dart_wrapper/: README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  test_api.dart  test_context.dart  test_silent.dart
dart_wrapper/.dart_tool/: package_config.json  package_config_subset  package_graph.json
dart_wrapper/.dart_tool/test/: incremental_kernel.Ly9AZGFydD0zLjA=
dart_wrapper/dart_wrapper/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
dart_wrapper/lib/: clipboard_monitor.dart  rust_wrapper.dart
dart_wrapper/lib/src/rust/: api.dart  frb_generated.dart
dart_wrapper/lib/src/rust/core/: app_switcher_enhanced.dart
dart_wrapper/scripts/: cycle_apps_dart.sh  run_and_cycle_dart.sh
dart_wrapper/src/: frb_generated.rs
dart_wrapper/test/: app_switcher_test.dart  clipboard_test.dart
examples/: compare_variants.rs  simple_enhanced_test.rs  test_enhanced_block.rs
research/: MORE_RESEARCH.md  Tsavo-DS-002-gemini-2.5-flash-RESPONSE.md
research/accesibility/: ACCESSIBILITY_FIX_RESEARCH.md  ADDITIONAL_RESEARCH.md  ADVANCED_RESEARCH.md
research/compilation/: COMPILATION_FIX_INSTRUCTIONS.md
research/objc2/: OBJC2_0.6_MACRO_RESEARCH.md  OBJC2_PROTOCOL_IMPLEMENTATION_EXAMPLES.md
research/window_tracking/: TAB_SWITCHING_DEEP_RESEARCH.md  TAB_SWITCHING_SUMMARY.md  WINDOW_STATE_INTEGRATION_GUIDE.md  WINDOW_STATE_TRACKING_ENHANCEMENTS.md
scripts/: cycle_apps.sh  run_and_cycle.sh
src/: api.rs  ffi_api.rs  frb_generated.rs  lib.rs  main.rs  tab_monitor.rs
src/core/: accessibility.rs  app_switcher.rs  app_switcher_enhanced.rs  app_switcher_enhanced_block.rs  app_switcher_types.rs  app_switcher_workspace.rs  event_tap.rs  ffi_types.rs  mod.rs  spaces.rs  time_tracker.rs  window_state_detector.rs  window_state_detector_fixed.rs
src/detectors/: mod.rs  scroll_tap.rs
src/extractors/: mod.rs  time_tracker.rs
src/utils/: front_window_check.rs
