[package]
name = "research-assistant-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Modern, modular macOS focus tracking system for research assistance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/research-assistant-tracker"
keywords = ["macos", "accessibility", "focus-tracking", "research", "automation"]
categories = ["os::macos-apis", "development-tools"]

# Require a recent Rust version for objc2 0.6.x compatibility
rust-version = "1.71"

[dependencies]
# Core objc2 ecosystem - VERIFIED CURRENT VERSIONS
objc2 = "0.6.2"
# objc2-foundation - core Foundation framework bindings
objc2-foundation = { version = "0.3.1" }
# objc2-app-kit - AppKit framework bindings  
objc2-app-kit = { version = "0.3.1" }
# Remove objc2-application-services and objc2-accessibility as they don't exist
# Already have accessibility-sys for accessibility APIs
# Use accessibility-sys for accessibility APIs
accessibility-sys = "0.2"
objc2-core-graphics = { version = "0.3.1" }
# objc2-core-foundation for Core Foundation types
objc2-core-foundation = { version = "0.3.1" }
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"

block2 = "0.6.1"

# Modern async runtime for handling background tasks
tokio = { version = "1.0", features = ["full"] }

# Serialization for structured output and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding/decoding for file paths
urlencoding = "2.1"

# Base64 encoding for icon data
base64 = "0.22"

# System information for process monitoring
sysinfo = "0.37"
bitflags = "2"

# macOS main thread dispatch for NSApplication
dispatch = "0.2"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Image processing and parallelism for the Chrome UI segmentation bin
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1.10"

# Optional: Database storage for long-term research data
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# Flutter Rust Bridge dependencies
flutter_rust_bridge = "=2.11.1"

# Grand Central Dispatch for main thread management
dispatch2 = "0.2"


[features]
default = ["cli"]
cli = []
database = ["dep:sqlx"]
enhanced_block = []

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies are automatically included

# Build configuration for proper framework linking
[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

# Development dependencies for testing
[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"

# Profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true

# Custom build script to handle framework linking
[[bin]]
name = "research-tracker"
path = "src/main.rs"

# Library for embedding in other projects
[lib]
name = "research_assistant_tracker"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]
